Show last 10 errors in /status

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
   --bg-lighten: #f6f9fc;
   --color: #32325d;
   --color-lighten: #8898aa;
-  --color-accent: #00f;
+  --color-accent: #5741d9;
   --color-accent-lighten: #555;
   --color-green: #6CDB56;
   --color-red: #FA6D46;
