--- a/src/styles/page-status.css
+++ b/src/styles/page-status.css
@@ -1,4 +1,5 @@
 .status header h1 {
+  color: var(--color-accent);
   font-weight: 700;
   font-size: var(--font-size-L);
   margin-right: var(--space-S);
@@ -20,10 +21,7 @@
   margin-bottom: var(--space-S);
 }
 
-.status h3 {
-  /*font-size: var(--font-size-L);*/
-  font-weight: 700;
-}
+.status h3 { font-weight: 700; }
 
 .status .header {}
 
@@ -34,9 +32,8 @@
     margin-right: var(--space);
   }
 
-.status .content, .status .legend {
-  background-color: var(--bg-lighten);
-}
+.status .content,
+.status .legend { background-color: var(--bg-lighten); }
 
 .item + .item{ margin-top: var(--space); }
 
@@ -47,13 +44,12 @@
   opacity: 0.68;
 }
   .status .bar:hover { opacity: 1; }
+  .status .bar:first-child { margin-right: 0; }
+  .status .bar:last-child { margin-left: 0; }
 
-.status .bar:first-child { margin-left: 0; }
-.status .bar:last-child { margin-right: 0; }
+.status .row.error { margin-bottom: var(--space); }
 
-.status .legend {
-  margin-top: calc(var(--unit) * 0.1);
-}
+.status .legend { margin-top: calc(var(--unit) * 0.1); }
   .status .legend .square {
     border-radius: var(--border-radius);
     height: 0.5rem;
